RESOLVED FIXED141537
REGRESSION: Should not send wheel events with a delta of 0
https://bugs.webkit.org/show_bug.cgi?id=141537
Summary REGRESSION: Should not send wheel events with a delta of 0
Beth Dakin
Reported 2015-02-12 14:36:58 PST
This is a regression from http://trac.webkit.org/changeset/172832/trunk/Source/WebCore/dom/Element.cpp We should not be sending wheel events to the DOM with a delta of 0. This affects webmail.apple.com rdar://problem/18903118
Attachments
Patch (4.86 KB, patch)
2015-02-12 14:58 PST, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2015-02-12 14:58:01 PST
Simon Fraser (smfr)
Comment 2 2015-02-12 15:05:38 PST
Comment on attachment 246478 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246478&action=review > Source/WebCore/dom/Element.cpp:282 > + if (!(event.deltaX() || event.deltaY())) This would be clearer as if (!deltaX && !deltaY()) I think.
Beth Dakin
Comment 3 2015-02-12 15:09:38 PST
Beth Dakin
Comment 4 2015-02-12 16:14:08 PST
Brent Fulgham
Comment 5 2015-02-17 14:38:46 PST
This change breaks snap scroll points, but you couldn't have known that since I have not gotten around to making suitable tests!
Beth Dakin
Comment 6 2015-02-17 14:42:50 PST
(In reply to comment #5) > This change breaks snap scroll points, but you couldn't have known that > since I have not gotten around to making suitable tests! I wonder why snap scroll points rely on getting a delta of 0?
Brent Fulgham
Comment 7 2015-02-17 14:47:40 PST
(In reply to comment #6) > (In reply to comment #5) > > This change breaks snap scroll points, but you couldn't have known that > > since I have not gotten around to making suitable tests! > > I wonder why snap scroll points rely on getting a delta of 0? I'm not sure. I'm debugging the code now to see why it matters. I think we have some kind of edge case where the user has ended the wheel motion and the snap animation is about to start. If we return 'false' in this case, the event is treated as unhandled and the animation never starts. I'll know more once I finish debugging.
Note You need to log in before you can comment on or make changes to this bug.