REGRESSION: Should not send wheel events with a delta of 0 https://bugs.webkit.org/show_bug.cgi?id=141537 -and corresponding- rdar://problem/18903118

Reviewed by Simon Fraser.

Source/WebCore:

This code should not have been removed entirely to accommodate rubber-banding, it
just needs to return false instead of true in order to allow the MayBegin and
Ended phases to be handled by the ElasticityController.
* dom/Element.cpp:
(WebCore::Element::dispatchWheelEvent):

LayoutTests:

* platform/mac-wk2/tiled-drawing/scrolling/wheel-events-with-no-delta-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/scrolling/wheel-events-with-no-delta.html: Added.



Canonical link: https://commits.webkit.org/159567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180018 268f45cc-cd09-0410-ab3c-d52691b4dbfc